VirtualSpaceList tracks free space on wrong node

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b31

        VirtualSpaceList::free_bytes() reports free space that is available for chunk allocation.

        Instead of reporting the free space of current virtual space node (the node where the allocation is happening), it reports the head of the list, which is the first node of the list.

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: