8187331: VirtualSpaceList tracks free space on wrong node

Fixed miscounting of virtual space node's free memory

Reviewed-by: shade, coleenp, stuefe